homework7/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-app-service
spec:
  type: ClusterIP
  selector:
    app: course-app
  ports:
    - port: 8080
      targetPort: 8080
      # nodePort: 30080
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
