homework7/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: course-app-ingress
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`course-app.localhost`)
      kind: Rule
      services:
        - name: course-app-service
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: course-app-ingress-tls
spec:
  entryPoints:
    - websecure 
  routes:
    - match: Host(`course-app.localhost`)
      kind: Rule
      services:
        - name: course-app-service
          port: 8080
  tls:
    secretName: course-app-tls
